force-app/main/default/objects/Territory_Snapshot__c/Territory_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Territory Snapshot</label>
    <nameField>
        <displayFormat>TERSNAP-{0000000000}</displayFormat>
        <label>Territory Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>