force-app/main/default/objects/Territory_Snapshot__c/fields/CM_End_Cube__c.field-meta.xml
<CustomField>
    <fullName>CM_End_Cube__c</fullName>
    <description>Current Ending Balance</description>
    <label>CM End Cube</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>