force-app/main/default/objects/Territory_Snapshot__c/fields/CY_YTD_Destruction__c.field-meta.xml
<CustomField>
    <fullName>CY_YTD_Destruction__c</fullName>
    <label>CY YTD Destruction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>