force-app/main/default/objects/Territory_Snapshot__c/fields/CY_YTD_Net_Cube_w_o_Aqui__c.field-meta.xml
<CustomField>
    <fullName>CY_YTD_Net_Cube_w_o_Aqui__c</fullName>
    <formula>CY_YTD_Inbound_Cube__c - CY_YTD_Destruction__c - CY_YTD_PW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY YTD Net Cube w/o Aqui</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>