force-app/main/default/objects/Territory_Snapshot__c/fields/Previous_Cube_Period__c.field-meta.xml
<CustomField>
    <fullName>Previous_Cube_Period__c</fullName>
    <formula>IF(
	AND(
		MONTH(Storage_Date__c)= 12,
		VALUE($Label.Current_End_Cube_Period)= 1, 
		YEAR(Storage_Date__c)= (VALUE($Label.Current_Cube_Year)-1)
		),
	&quot;YES&quot;,
	IF( 
		AND( 
			MONTH(Storage_Date__c)= (VALUE($Label.Current_End_Cube_Period)-1), 
			YEAR(Storage_Date__c)= VALUE($Label.Current_Cube_Year) 
			), 
		&quot;YES&quot;, 
		&quot;NO&quot; 
		)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Cube Period?</label>
    <type>Text</type>
</CustomField>