force-app/main/default/objects/Territory_Snapshot__c/fields/PY_YTD_Net_Cube_w_Aqui__c.field-meta.xml
<CustomField>
    <fullName>PY_YTD_Net_Cube_w_Aqui__c</fullName>
    <formula>PY_YTD_Inbound_Cube__c - PY_YTD_Destruction__c - PY_YTD_PW__c + PY_YTD_Aquisition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PY YTD Net Cube w/ Aqui</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>