force-app/main/default/objects/Territory_Snapshot__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <referenceTo>Billing_Territory__c</referenceTo>
    <relationshipLabel>Territory Snapshots</relationshipLabel>
    <relationshipName>Territory_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>