force-app/main/default/objects/Territory_Snapshot__c/fields/Total_Destruction__c.field-meta.xml
<CustomField>
    <fullName>Total_Destruction__c</fullName>
    <label>Total Destruction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>