force-app/main/default/objects/Territory_Snapshot__c/fields/Total_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Total_Inbound__c</fullName>
    <label>Total Inbound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>