force-app/main/default/objects/Territory_Snapshot__c/fields/Total_Net_New_Cube__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_New_Cube__c</fullName>
    <formula>Total_Inbound__c - Total_Destruction__c - Total_PW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>not including aquisitions</inlineHelpText>
    <label>Total Net New Cube</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>