force-app/main/default/objects/Territory_Snapshot__c/fields/Total_PW__c.field-meta.xml
<CustomField>
    <fullName>Total_PW__c</fullName>
    <label>Total PW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>