force-app/main/default/objects/Territory_Snapshot__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <formula>Total_Inbound__c - Total_Destruction__c - Total_PW__c + Total_Aquisition_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>including transactions</inlineHelpText>
    <label>Total Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>